# power_control_center

./: .gitignore  Cargo.toml  README.md  config-example.json  test.db
.github/: copilot-instructions.md
.github/workflows/: release.yml
defaults/: cause_reasons.json  default_nodeset.json
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.svelte  app.css
icon/: icon.blend  pain.glb
installation/: install.sh  power_control_center.service
migrations/: 20251003164409_initial_structure.sql  20251020211912_add_settings.sql  20251122000001_add_cause_id.sql  20251122172900_add_ac_action_logging_fields.sql  20251122191947_add_solar_production.sql  20251123000001_add_pir_detection_cause.sql  20251124134258_add_node_configuration.sql  20251129153923_add_nodesets_table.sql  20251129170601_add_cause_reasons_table.sql  20251129182834_add_is_editable_to_cause_reasons.sql  20251201043428_recreate_node_defaults.sql  20251203000000_add_user_home_override.sql
pi-wifi-reconnector/: README.md  install-wifi-reconnect-cron.sh  wifi-reconnect.sh
src/: ac_controller.rs  main.rs  webserver.rs
src/ac_controller/: devices.rs  manual_mode_monitor.rs  min_on_time.rs  mod.rs  node_executor.rs  pir_state.rs  plan_helpers.rs  plan_types.rs  time_helpers.rs
src/ac_remote_access/: mod.rs
src/config/: mod.rs  tests.rs
src/db/: ac_actions.rs  access.rs  cause_reasons.rs  defaults.rs  mod.rs  nodesets.rs
src/device_requests/: ac.rs  cache.rs  common.rs  logging_queue.rs  meter.rs  mod.rs  weather.rs
src/nodes/: README.md  ac_planner_nodes.rs  (+10 more)
tmp-screenshots/: test-table.html
web/: index.html
(+28 files in other folders)
