[package]
name = "power_control_center"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = true
panic = 'abort'
strip = false

[profile.release]
opt-level = 3
panic = 'abort' 

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
once_cell = "1.21.3"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
