[package]
name = "power_control_center"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = true
panic = 'abort'
strip = false

[profile.release]
opt-level = 3
panic = 'abort' 

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
rust-embed = "8.7.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
reqwest = {version = "0.12.24", features = ["json"] }
once_cell = "1.21"
